# bhsignal-scraper

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: scrape.yml
app/: __init__.py  main.py
app/api/: dependencies.py  router.py
app/api/routes/: health.py  news.py  outbox.py  scrape.py
app/clients/: __init__.py  klix_rss_client.py
app/core/: config.py  db.py
app/data/: location_catalog.json
app/models/: __init__.py  article.py  outbox_event.py
app/schemas/: article.py  outbox.py  scrape.py
app/services/: dedup.py  location_resolver.py  outbox_service.py  scheduler.py  scraper_service.py
ci/: scrape.ps1
tests/: test_klix_rss_client.py  test_location_resolver.py  test_scraper_service.py
tests/fixtures/: klix_rss_sample.xml
tools/: mock_webhook_receiver.py
