[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klix-scraper-service"
version = "0.1.0"
description = "Klix scraper service with location extraction and webhook outbox"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "apscheduler>=3.10,<4.0",
  "fastapi>=0.115,<1.0",
  "feedparser>=6.0,<7.0",
  "httpx>=0.27,<0.28",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "python-dateutil>=2.9,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3.2,<4.0",
]
test = [
  "pytest>=8.2,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
